removing old stuff

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 
 {% if x == true %}
     <header class="home__header">
-        <img alt="{{ site.name }}" src="/{{ site.picture }}" />
+        <img alt="{{ site.name }}" src="{{ site.url }}/{{ site.picture }}" />
 
         <h1>{{ site.name }}</h1>
         <h2>{{ site.bio }}</h2>
