--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@ layout: default
 
 <section class="author">
     <div class="author__left">
-        <img class="author__picture reyes" src="/{{ site.picture }}" alt="{{ site.name }}">
+        <img class="author__picture reyes" src="{{ site.url }}/{{ site.picture }}" alt="{{ site.name }}">
     </div>
 
     <div class="author__right">
