--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
             <a href="http://instagram.com/{{ site.instagram }}" target="_blank"><svg class="icon icon-instagram"><use xlink:href="#icon-instagram"></use></svg></a>
             <a href="http://linkedin.com/{{ site.linkedin }}" target="_blank"><svg class="icon icon-linkedin"><use xlink:href="#icon-linkedin"></use></svg></a>
             <a href="http://youtube.com/{{ site.youtube }}" target="_blank"><svg class="icon icon-youtube"><use xlink:href="#icon-youtube"></use></svg></a>
-            <a href="mailto:{{ site.email }}" target="_blank"><svg class="icon icon-email"><use xlink:href="#icon-email"></use></svg></a>
+            <a href="mailto:{{ site.email }}" target="_blank"><svg class="icon icon-mail"><use xlink:href="#icon-mail"></use></svg></a>
         </div>
     </header>
 {% endif %}
