--- a/src/styles/components/_author.styl
+++ b/src/styles/components/_author.styl
@@ -52,6 +52,9 @@
         text-align right
         position relative
         top -10px
+        
+        a
+            text-decoration none
 
         +mobile()
             width 100%
