--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -302,7 +302,7 @@ h4 {
 }
 a {
   color: #4b0082;
-  text-decoration: none;
+  text-decoration: underline;
 }
 p {
   line-height: 1.7;
@@ -493,6 +493,7 @@ pre {
   height: 100%;
   display: block;
   padding: 20px 0;
+  text-decoration: none;
 }
 .home .home__sections .home__sections-single h3,
 .blog .home__sections .home__sections-single h3 {
@@ -538,6 +539,7 @@ pre {
   height: 100%;
   display: block;
   padding: 30px 0;
+  text-decoration: none;
 }
 .page .home__sections .home__sections-single:last-child {
   border: 0;
@@ -567,6 +569,11 @@ pre {
 .post h3,
 .post h4 {
   margin-top: 40px;
+}
+.post h2 a,
+.post h3 a,
+.post h4 a {
+  text-decoration: none;
 }
 .post span time {
   color: #aaa;
@@ -598,6 +605,7 @@ pre {
   font-weight: 300;
   font-size: 1.4rem;
   padding: 20px 10px;
+  text-decoration: none;
 }
 .home__header-nav {
   margin-top: 40px;
@@ -621,6 +629,7 @@ pre {
   -webkit-transition: all 0.4s ease-in-out;
           transition: all 0.4s ease-in-out;
   width: 70px;
+  text-decoration: none;
 }
 .home__header-nav ul li a:hover {
   color: #666;
@@ -730,6 +739,9 @@ footer a svg:hover {
   text-align: right;
   position: relative;
   top: -10px;
+}
+.author .author__share a {
+  text-decoration: none;
 }
 @media only screen and (max-width: 400px) {
   .author .author__share {
