--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@ layout: compress
     <meta name=description content="{{ site.bio }}">
     <meta name=author content="{{ site.name }}">
 
-    <title>{{ page.title }}</title>
+    <title>{{ site.name }} &middot; {{ page.title }}</title>
 
     {% seo %}
 
