--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,4 @@
 <footer>
     {{ site.name }} © {{ site.time | date: '%Y' }} <a href="{{ site.url }}/feed.xml" target="_blank"><svg class="icon icon-rss"><use xlink:href="#icon-rss"></use></svg></a>
+    <p><a href="http://koppl.in/indigo">Indigo theme</a> by <a href="http://koppl.in">koppl.in</a></p>
 </footer>
