--- a/src/styles/components/_footer.styl
+++ b/src/styles/components/_footer.styl
@@ -34,3 +34,10 @@ footer
 
             &:hover
                 fill delta !important
+
+    p
+        color gama
+        margin-top 0
+
+        a
+            color gama
