--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -1,13 +1,15 @@
 <div class="pagination">
-  {% if paginator.previous_page %}
-    <a href="{{ paginator.previous_page_path }}" class="previous">Previous</a>
-  {% else %}
-    <span class="previous">Previous</span>
-  {% endif %}
-  <span class="page_number ">Page: {{ paginator.page }} of {{ paginator.total_pages }}</span>
-  {% if paginator.next_page %}
-    <a href="{{ paginator.next_page_path }}" class="next">Next</a>
-  {% else %}
-    <span class="next ">Next</span>
-  {% endif %}
+    {% if paginator.previous_page %}
+        <a href="{{ paginator.previous_page_path }}" class="previous">«</a>
+    {% else %}
+        <span class="previous hidden">«</span>
+    {% endif %}
+
+    <span class="page_number ">page {{ paginator.page }} of {{ paginator.total_pages }}</span>
+
+    {% if paginator.next_page %}
+        <a href="{{ paginator.next_page_path }}" class="next">»</a>
+    {% else %}
+        <span class="next hidden">»</span>
+    {% endif %}
 </div>
