--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -5,15 +5,17 @@ title: Blog
 {% include header.html %}
 
 <section class="home__sections">
+	{% if site.paginate %}
 		{% for post in paginator.posts %}
-        <div class="home__sections-single {% if post.star == true %}star{% endif %}">
-            <a href="{{ site.url }}{{ post.url }}">
-                <aside><time datetime="{{ post.date | date:"%d-%m-%Y" }}">{{ post.date | date: "%b %d %Y" }}</time></aside>
-                <h3>{{ post.title }}</h3>
-            </a>
-        </div>
-        {% endfor %}
-    {% include pagination.html%}  
+	        {% include blog-post.html %}
+	    {% endfor %}
+
+		{% if site.paginate %}{% include pagination.html%}{% endif %}
+	{% else %}
+		{% for post in site.posts %}
+			{% include blog-post.html %}
+		{% endfor %}
+	{% endif %}
 </section>
 
 {% include footer.html %}
