--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-{% if page.title == "Home" or page.title == "Blog" %}{% assign x = true %}{% endif %}
+{% if page.title == "Home" or page.title == "Blog" or page.title == "Projects" %}{% assign x = true %}{% endif %}
 
 {% if x == true %}
     <header class="home__header">
