--- a/src/styles/pages/_home-blog-projects.styl
+++ b/src/styles/pages/_home-blog-projects.styl
@@ -1,4 +1,4 @@
-.home, .blog
+.home, .blog, .projects
     margin-top 125px
 
     .home__header
@@ -95,3 +95,14 @@
                 color gama
                 text-align right
                 transition all ease-in-out .2s
+
+.projects
+    .home__sections-single
+        h3
+            display inline
+
+        .emoji
+            display inline
+            position relative
+            top -4px
+            margin-right 10px
