--- a/_includes/blog-post.html
+++ b/_includes/blog-post.html
@@ -1,6 +1,8 @@
-<div class="home__sections-single {% if post.star == true %}star{% endif %}">
-    <a href="{{ site.url }}{{ post.url }}">
-        <aside><time datetime="{{ post.date | date:"%d-%m-%Y" }}">{{ post.date | date: "%b %d %Y" }}</time></aside>
-        <h3>{{ post.title }}</h3>
-    </a>
-</div>
+{% if post.blog %}
+    <div class="home__sections-single {% if post.star == true %}star{% endif %}">
+        <a href="{{ site.baseurl }}{{ post.url }}">
+            <aside><time datetime="{{ post.date | date:"%d-%m-%Y" }}">{{ post.date | date: "%b %d %Y" }}</time></aside>
+            <h3>{{ post.title }}</h3>
+        </a>
+    </div>
+{% endif %}
