--- a/_includes/blog-post.html
+++ b/_includes/blog-post.html
@@ -1,4 +1,4 @@
-{% if post.blog ==  %}
+{% if post.blog == true %}
     <div class="home__sections-single {% if post.star == true %}star{% endif %}">
         <a href="{{ site.url }}{{ post.url }}">
             <aside><time datetime="{{ post.date | date:"%d-%m-%Y" }}">{{ post.date | date: "%b %d %Y" }}</time></aside>
