--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,8 +1,8 @@
 <nav class="{% if page.title == "Home" %}home__header-nav{% else %}nav{% endif %}">
     <ul>
         {% if page.title != "Home" %}<li><a href="{{ site.url }}/">Home</a></li>{% endif %}
-        {% if page.title != "Blog" %}<li><a href="{{ site.url }}/blog">Blog</a></li>{% endif %}
+        {% if site.blog == true %}{% if page.title != "Blog" %}<li><a href="{{ site.url }}/blog">Blog</a></li>{% endif %}{% endif %}
         {% if site.projects == true %}{% if page.title != "Projects" %}<li><a href="{{ site.url }}/projects">Projects</a></li>{% endif %}{% endif %}
-        {% if page.title != "About" %}<li><a href="{{ site.url }}/about">About</a></li>{% endif %}
+        {% if site.about == true %}{% if page.title != "About" %}<li><a href="{{ site.url }}/about">About</a></li>{% endif %}{% endif %}
     </ul>
 </nav>
