refactoring for styles/base files

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -2,7 +2,7 @@
 @import "base/_syntax"
 @import "base/_normalize"
 @import "base/_general"
-@import "base/_icons"
+@import "base/_helpers"
 
 @import "pages/_home-blog-projects"
 @import "pages/_page"
