update for analytics

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@ layout: compress
 
     <title>{{ site.name }} &middot; {{ page.title }}</title>
 
+    <!-- Jekyll Plugin -->
     {% seo %}
 
     {% include favicon.html %}
@@ -42,17 +43,7 @@ layout: compress
 
     {% include icons.html %}
 
-    <!-- Google Analytics Tracking code -->
-    <script type="text/javascript">
-        var _gaq = _gaq || [];
-        _gaq.push(['_setAccount', '{{ site.analytics }}']);
-        _gaq.push(['_trackPageview']);
-        (function() {
-            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-        })();
-    </script>
+    {% include analytics-google.html %}
 
 </body>
 </html>
