--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@ layout: compress
 </head>
 <body>
 
-    <div class="site-wrapper">
+    <div class="wrapper">
         {% if page.tag %}
             <div class="post">
         {% else %}
