rscss for social links + some modifications in configs + social at includes

--- a/_includes/analytics-google.html
+++ b/_includes/analytics-google.html
@@ -1,7 +1,7 @@
 <!-- Google Analytics Tracking code -->
 <script type="text/javascript">
     var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', '{{ site.analytics }}']);
+    _gaq.push(['_setAccount', '{{ site.analytics-google }}']);
     _gaq.push(['_trackPageview']);
     (function() {
         var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
