--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -9,6 +9,7 @@
 @import "pages/_post"
 
 @import "components/_nav"
+@import "components/_social-links"
 @import "components/_footer"
 @import "components/_disqus"
 @import "components/_author"
