--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,21 +1,13 @@
-{% if page.title == "Home" or page.title == "Blog" or page.title == "Projects" %}{% assign x = true %}{% endif %}
+{% if page.title == "Home" or page.title == "Blog" or page.title == "Projects" %}{% assign showHeader = true %}{% endif %}
 
-{% if x == true %}
+{% if showHeader == true %}
     <header class="home__header">
         <img alt="{{ site.name }}" src="{{ site.url }}/{{ site.picture }}" />
 
         <h1>{{ site.name }}</h1>
         <h2>{{ site.bio }}</h2>
 
-        <div class="home__header-social">
-            <a href="http://facebook.com/{{ site.facebook }}" target="_blank"><svg class="icon icon-facebook"><use xlink:href="#icon-facebook"></use></svg></a>
-            <a href="http://twitter.com/{{ site.twitter }}" target="_blank"><svg class="icon icon-twitter"><use xlink:href="#icon-twitter"></use></svg></a>
-            <a href="https://github.com/{{ site.github }}" target="_blank"><svg class="icon icon-github"><use xlink:href="#icon-github"></use></svg></a>
-            <a href="http://instagram.com/{{ site.instagram }}" target="_blank"><svg class="icon icon-instagram"><use xlink:href="#icon-instagram"></use></svg></a>
-            <a href="http://linkedin.com/{{ site.linkedin }}" target="_blank"><svg class="icon icon-linkedin"><use xlink:href="#icon-linkedin"></use></svg></a>
-            <a href="http://youtube.com/{{ site.youtube }}" target="_blank"><svg class="icon icon-youtube"><use xlink:href="#icon-youtube"></use></svg></a>
-            <a href="mailto:{{ site.email }}" target="_blank"><svg class="icon icon-mail"><use xlink:href="#icon-mail"></use></svg></a>
-        </div>
+        {% include social-links.html %}
     </header>
 {% endif %}
 
