--- a/src/styles/components/_nav.styl
+++ b/src/styles/components/_nav.styl
@@ -18,7 +18,7 @@
                 padding 20px 10px
                 text-decoration none
 
-.home__header-nav
+.nav-home
     margin-top 40px
     text-align center
 
