--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -8,6 +8,7 @@
 @import "pages/_page"
 @import "pages/_post"
 
+@import "components/_header"
 @import "components/_nav"
 @import "components/_social-links"
 @import "components/_footer"
