--- a/src/styles/components/_footer.styl
+++ b/src/styles/components/_footer.styl
@@ -1,4 +1,4 @@
-footer
+.footer-main
     border-top 1px solid epsilon
     padding 40px 0
     margin 40px 0 0
@@ -22,10 +22,10 @@ footer
         box-shadow #FFF 0 0 0 5px
         border-radius 3px
 
-    a
+    > .link
         display inline
 
-        svg
+        > .icon
             width 15px !important
             fill gama !important
             transition ease-in-out all .3s
@@ -35,10 +35,10 @@ footer
             &:hover
                 fill delta !important
 
-    p
+    > .extra
         color gama
         margin-top 0
 
-        a
+        > .link
             color beta
             text-decoration none
