--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -1,18 +1,9 @@
 @import "base/_variables"
 @import "base/_syntax"
 @import "base/_normalize"
-@import "base/_general"
-@import "base/_helpers"
 
-@import "pages/_home-blog-projects"
-@import "pages/_page"
-@import "pages/_post"
+@import "base/*"
 
-@import "components/_header"
-@import "components/_nav"
-@import "components/_social-links"
-@import "components/_footer"
-@import "components/_disqus"
-@import "components/_author"
-@import "components/_others"
-@import "components/_pagination"
+@import "pages/*"
+
+@import "components/*"
