--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -1,8 +1,8 @@
 @import "base/_variables"
-@import "base/_syntax"
 @import "base/_normalize"
-
-@import "base/*"
+@import "base/_syntax"
+@import "base/_general"
+@import "base/_helpers"
 
 @import "pages/*"
 
