--- a/_includes/main.css
+++ b/_includes/main.css
@@ -1,3 +1,66 @@
+/* normalize.css v3.0.2 | MIT License | git.io/normalize */
+html {
+  font-family: sans-serif; /* 1 */
+  -ms-text-size-adjust: 100%; /* 2 */
+  -webkit-text-size-adjust: 100%; /* 2 */
+}
+body {
+  margin: 0;
+}
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+main,
+menu,
+nav,
+section,
+summary {
+  display: block;
+}
+audio,
+canvas,
+progress,
+video {
+  display: inline-block; /* 1 */
+  vertical-align: baseline; /* 2 */
+}
+audio:not([controls]) {
+  display: none;
+  height: 0;
+}
+a {
+  background-color: transparent;
+}
+a:active,
+a:hover {
+  outline: 0;
+}
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
+img {
+  border: 0;
+}
+hr {
+  box-sizing: content-box;
+  height: 0;
+}
+pre {
+  overflow: auto;
+}
+code,
+kbd,
+pre,
+samp {
+  font-family: monospace, monospace;
+  font-size: 1em;
+}
 .highlight .c {
   color: #998;
   font-style: italic;
@@ -200,69 +263,6 @@
 .highlight .gc {
   color: #999;
   background-color: #eaf2f5;
-}
-/* normalize.css v3.0.2 | MIT License | git.io/normalize */
-html {
-  font-family: sans-serif; /* 1 */
-  -ms-text-size-adjust: 100%; /* 2 */
-  -webkit-text-size-adjust: 100%; /* 2 */
-}
-body {
-  margin: 0;
-}
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-main,
-menu,
-nav,
-section,
-summary {
-  display: block;
-}
-audio,
-canvas,
-progress,
-video {
-  display: inline-block; /* 1 */
-  vertical-align: baseline; /* 2 */
-}
-audio:not([controls]) {
-  display: none;
-  height: 0;
-}
-a {
-  background-color: transparent;
-}
-a:active,
-a:hover {
-  outline: 0;
-}
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
-}
-img {
-  border: 0;
-}
-hr {
-  box-sizing: content-box;
-  height: 0;
-}
-pre {
-  overflow: auto;
-}
-code,
-kbd,
-pre,
-samp {
-  font-family: monospace, monospace;
-  font-size: 1em;
 }
 body,
 html {
@@ -399,272 +399,6 @@ pre {
   fill: #000;
   color: #000;
 }
-/* normalize.css v3.0.2 | MIT License | git.io/normalize */
-html {
-  font-family: sans-serif; /* 1 */
-  -ms-text-size-adjust: 100%; /* 2 */
-  -webkit-text-size-adjust: 100%; /* 2 */
-}
-body {
-  margin: 0;
-}
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-main,
-menu,
-nav,
-section,
-summary {
-  display: block;
-}
-audio,
-canvas,
-progress,
-video {
-  display: inline-block; /* 1 */
-  vertical-align: baseline; /* 2 */
-}
-audio:not([controls]) {
-  display: none;
-  height: 0;
-}
-a {
-  background-color: transparent;
-}
-a:active,
-a:hover {
-  outline: 0;
-}
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
-}
-img {
-  border: 0;
-}
-hr {
-  box-sizing: content-box;
-  height: 0;
-}
-pre {
-  overflow: auto;
-}
-code,
-kbd,
-pre,
-samp {
-  font-family: monospace, monospace;
-  font-size: 1em;
-}
-.highlight .c {
-  color: #998;
-  font-style: italic;
-}
-.highlight .err {
-  color: #a61717;
-  background-color: #e3d2d2;
-}
-.highlight .k {
-  font-weight: bold;
-}
-.highlight .o {
-  font-weight: bold;
-}
-.highlight .cm {
-  color: #998;
-  font-style: italic;
-}
-.highlight .cp {
-  color: #999;
-  font-weight: bold;
-}
-.highlight .c1 {
-  color: #998;
-  font-style: italic;
-}
-.highlight .cs {
-  color: #999;
-  font-weight: bold;
-  font-style: italic;
-}
-.highlight .gd {
-  color: #000;
-  background-color: #fdd;
-}
-.highlight .gd .x {
-  color: #000;
-  background-color: #faa;
-}
-.highlight .ge {
-  font-style: italic;
-}
-.highlight .gr {
-  color: #a00;
-}
-.highlight .gh {
-  color: #999;
-}
-.highlight .gi {
-  color: #000;
-  background-color: #dfd;
-}
-.highlight .gi .x {
-  color: #000;
-  background-color: #afa;
-}
-.highlight .go {
-  color: #888;
-}
-.highlight .gp {
-  color: #555;
-}
-.highlight .gs {
-  font-weight: bold;
-}
-.highlight .gu {
-  color: #800080;
-  font-weight: bold;
-}
-.highlight .gt {
-  color: #a00;
-}
-.highlight .kc {
-  font-weight: bold;
-}
-.highlight .kd {
-  font-weight: bold;
-}
-.highlight .kn {
-  font-weight: bold;
-}
-.highlight .kp {
-  font-weight: bold;
-}
-.highlight .kr {
-  font-weight: bold;
-}
-.highlight .kt {
-  color: #458;
-  font-weight: bold;
-}
-.highlight .m {
-  color: #099;
-}
-.highlight .s {
-  color: #d14;
-}
-.highlight .n {
-  color: #333;
-}
-.highlight .na {
-  color: #008080;
-}
-.highlight .nb {
-  color: #0086b3;
-}
-.highlight .nc {
-  color: #458;
-  font-weight: bold;
-}
-.highlight .no {
-  color: #008080;
-}
-.highlight .ni {
-  color: #800080;
-}
-.highlight .ne {
-  color: #900;
-  font-weight: bold;
-}
-.highlight .nf {
-  color: #900;
-  font-weight: bold;
-}
-.highlight .nn {
-  color: #555;
-}
-.highlight .nt {
-  color: #000080;
-}
-.highlight .nv {
-  color: #008080;
-}
-.highlight .ow {
-  font-weight: bold;
-}
-.highlight .w {
-  color: #bbb;
-}
-.highlight .mf {
-  color: #099;
-}
-.highlight .mh {
-  color: #099;
-}
-.highlight .mi {
-  color: #099;
-}
-.highlight .mo {
-  color: #099;
-}
-.highlight .sb {
-  color: #d14;
-}
-.highlight .sc {
-  color: #d14;
-}
-.highlight .sd {
-  color: #d14;
-}
-.highlight .s2 {
-  color: #d14;
-}
-.highlight .se {
-  color: #d14;
-}
-.highlight .sh {
-  color: #d14;
-}
-.highlight .si {
-  color: #d14;
-}
-.highlight .sx {
-  color: #d14;
-}
-.highlight .sr {
-  color: #009926;
-}
-.highlight .s1 {
-  color: #d14;
-}
-.highlight .ss {
-  color: #990073;
-}
-.highlight .bp {
-  color: #999;
-}
-.highlight .vc {
-  color: #008080;
-}
-.highlight .vg {
-  color: #008080;
-}
-.highlight .vi {
-  color: #008080;
-}
-.highlight .il {
-  color: #099;
-}
-.highlight .gc {
-  color: #999;
-  background-color: #eaf2f5;
-}
 .home,
 .blog,
 .projects {
@@ -797,21 +531,11 @@ samp {
 .post {
   margin-top: 125px;
 }
-.post h1.post__title {
+.post > .title {
   text-align: center;
   margin-bottom: 3rem;
 }
-.post h2,
-.post h3,
-.post h4 {
-  margin-top: 40px;
-}
-.post h2 a,
-.post h3 a,
-.post h4 a {
-  text-decoration: none;
-}
-.post span time {
+.post > .date {
   color: #aaa;
   font-weight: 300;
   font-size: 1.4rem;
@@ -823,6 +547,16 @@ samp {
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
 }
+.post h2,
+.post h3,
+.post h4 {
+  margin-top: 40px;
+}
+.post h2 a,
+.post h3 a,
+.post h4 a {
+  text-decoration: none;
+}
 .author {
   padding: 3rem 0;
   border-bottom: 1px solid #ededed;
@@ -830,34 +564,34 @@ samp {
   max-width: 100%;
   margin: 9rem auto 0;
 }
-.author .author__picture {
+.author .selfie {
   width: 90%;
   border-radius: 100%;
 }
-.author .author__name,
-.author .author__bio {
+.author .name,
+.author .bio {
   width: 60%;
   display: inline-block;
 }
-.author .author__name {
+.author .name {
   font-size: 1.5rem;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 500;
   margin: 6px 0 0;
 }
 @media only screen and (max-width: 400px) {
-  .author .author__name {
+  .author .name {
     width: 100%;
     display: block;
   }
 }
 @media only screen and (min-width: 400px) and (max-width: 1050px) {
-  .author .author__name {
+  .author .name {
     width: 100%;
     display: block;
   }
 }
-.author .author__bio {
+.author .bio {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 300;
   color: #aaa;
@@ -867,109 +601,43 @@ samp {
   margin: 0;
 }
 @media only screen and (max-width: 400px) {
-  .author .author__bio {
+  .author .bio {
     width: 100%;
     display: block;
   }
 }
 @media only screen and (min-width: 400px) and (max-width: 1050px) {
-  .author .author__bio {
+  .author .bio {
     width: 100%;
     display: block;
   }
 }
-.author .author__share {
-  float: right;
-  width: 40%;
-  display: inline;
-  text-align: right;
-  position: relative;
-  top: -10px;
-}
-.author .author__share a {
-  text-decoration: none;
-}
-@media only screen and (max-width: 400px) {
-  .author .author__share {
-    width: 100%;
-    display: block;
-    top: 0;
-    text-align: left;
-    float: none;
-    margin-top: 5px;
-  }
-}
-@media only screen and (min-width: 400px) and (max-width: 1050px) {
-  .author .author__share {
-    width: 100%;
-    display: block;
-    top: 0;
-    text-align: left;
-    float: none;
-    margin-top: 5px;
-  }
-}
-.author .author__share svg {
-  fill: #fff;
-  position: relative;
-  top: 3px;
-  margin-right: 4px;
-}
-.author .author__share .twitter,
-.author .author__share .facebook {
-  display: inline;
-  vertical-align: middle;
-  font-size: 13px;
-  font-weight: 700;
-  color: #fff;
-  padding: 6px 10px;
-  border-radius: 3px;
-  margin-left: 5px;
-}
-@media only screen and (max-width: 400px) {
-  .author .author__share .twitter,
-  .author .author__share .facebook {
-    margin: 0 5px 10px 0;
-  }
-}
-@media only screen and (min-width: 400px) and (max-width: 1050px) {
-  .author .author__share .twitter,
-  .author .author__share .facebook {
-    margin: 0 5px 10px 0;
-  }
-}
-.author .author__share .twitter {
-  background: #4fafed;
-}
-.author .author__share .facebook {
-  background: #4361b3;
-}
-.author .author__left {
+.author .toleft {
   width: 10%;
   display: inline-block;
 }
 @media only screen and (max-width: 400px) {
-  .author .author__left {
+  .author .toleft {
     width: 20%;
   }
 }
 @media only screen and (min-width: 400px) and (max-width: 1050px) {
-  .author .author__left {
+  .author .toleft {
     width: 20%;
   }
 }
-.author .author__right {
+.author .toright {
   width: 89%;
   display: inline-block;
   vertical-align: top;
 }
 @media only screen and (max-width: 400px) {
-  .author .author__right {
+  .author .toright {
     width: 78%;
   }
 }
 @media only screen and (min-width: 400px) and (max-width: 1050px) {
-  .author .author__right {
+  .author .toright {
     width: 78%;
   }
 }
@@ -1126,6 +794,70 @@ samp {
 }
 .pagination .hidden {
   visibility: hidden;
+}
+.share {
+  float: right;
+  width: 40%;
+  display: inline;
+  text-align: right;
+  position: relative;
+  top: -10px;
+}
+@media only screen and (max-width: 400px) {
+  .share {
+    width: 100%;
+    display: block;
+    top: 0;
+    text-align: left;
+    float: none;
+    margin-top: 5px;
+  }
+}
+@media only screen and (min-width: 400px) and (max-width: 1050px) {
+  .share {
+    width: 100%;
+    display: block;
+    top: 0;
+    text-align: left;
+    float: none;
+    margin-top: 5px;
+  }
+}
+.share > .twitter,
+.share > .facebook {
+  display: inline;
+  vertical-align: middle;
+  font-size: 13px;
+  font-weight: 700;
+  color: #fff;
+  padding: 6px 10px;
+  border-radius: 3px;
+  margin-left: 5px;
+  text-decoration: none;
+}
+@media only screen and (max-width: 400px) {
+  .share > .twitter,
+  .share > .facebook {
+    margin: 0 5px 10px 0;
+  }
+}
+@media only screen and (min-width: 400px) and (max-width: 1050px) {
+  .share > .twitter,
+  .share > .facebook {
+    margin: 0 5px 10px 0;
+  }
+}
+.share > .twitter {
+  background: #4fafed;
+}
+.share > .facebook {
+  background: #4361b3;
+}
+.share svg {
+  fill: #fff;
+  position: relative;
+  top: 3px;
+  margin-right: 4px;
 }
 .social-links {
   margin-top: 20px;
