--- a/src/styles/pages/_post.styl
+++ b/src/styles/pages/_post.styl
@@ -1,17 +1,11 @@
 .post
     margin-top 125px
 
-    h1.post__title
+    > .title
         text-align center
         margin-bottom 3rem
 
-    h2, h3, h4
-        margin-top 40px
-
-        a
-            text-decoration none
-
-    span time
+    > .date
         color gama
         font-weight 300
         font-size 1.4rem
@@ -22,3 +16,10 @@
         letter-spacing 1px
         -webkit-font-smoothing antialiased
         text-rendering optimizeLegibility
+
+    // general style
+    h2, h3, h4
+        margin-top 40px
+
+        a
+            text-decoration none
