--- a/src/styles/components/_others.styl
+++ b/src/styles/components/_others.styl
@@ -3,7 +3,7 @@
     color beta
 
 .star
-    h3
+    > h3
         width auto !important
         display inline
         background-image linear-gradient(to bottom, rgba(39,243,106,0.15), rgba(39,243,106,0.15))
